<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SecondActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="false">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:menu="@menu/menu_settings"
            app:navigationIcon="@drawable/baseline_arrow_back_24"
            app:title="@string/profile"
            app:titleMarginStart="8dp"
            app:titleTextAppearance="@style/BigTitle" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/textViewCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="16dp"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"
                android:textSize="16sp"
                app:drawableStartCompat="@mipmap/avatar" />

        </com.google.android.material.card.MaterialCardView>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/personal_data"
                android:layout_marginTop="28dp"
                android:layout_marginBottom="12dp"
                android:layout_marginStart="16dp"
                android:textColor="@color/light_yellow"/>

            <include
                android:id="@+id/fieldUsername"
                layout="@layout/user_field" />

            <include
                android:id="@+id/fieldSurename"
                layout="@layout/user_field" />

            <include
                android:id="@+id/fieldEmail"
                layout="@layout/user_field" />
            <include
                android:id="@+id/fieldLogin"
                layout="@layout/user_field" />

            <include
                android:id="@+id/fieldCity"
                layout="@layout/user_field" />

            <Button
                android:id="@+id/buttonLogOut"
                style="@style/FieldContent"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:background="?selectableItemBackground"
                android:drawableLeft="@drawable/exit"
                android:drawablePadding="72dp"
                android:text="@string/log_out"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>
